# firmsignal

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
backend/: .deepeval_telemetry.txt  pyproject.toml  railway.toml
backend/evals/: README.md  deepeval_checks.py  eval_utils.py  langsmith_dataset.py  run_evals.py
backend/evals/experiments/: skeptic_strictness.py
backend/evals/golden/: airbnb.json  anthropic.json  apple.json  boeing.json  jpmorgan.json  microsoft.json  nvidia.json  openai.json  stripe.json  tesla.json
backend/evals/results/: eval_20260417_101935.json  eval_20260417_103724.json  eval_20260417_152344.json  eval_20260417_152631.json  eval_20260420_110624.json  eval_20260420_114834.json  eval_20260420_122001.json  eval_20260420_123151.json  eval_20260420_160645.json  eval_20260420_162533.json  eval_20260421_075939.json  eval_20260421_083003.json  eval_20260421_083512.json  eval_20260421_084052.json  eval_20260421_100448.json  eval_20260421_101130.json  eval_20260421_102538.json  eval_20260421_113652.json  eval_20260421_122211.json  eval_20260421_131245.json  eval_20260421_131524.json  eval_20260421_132859.json  eval_20260421_133551.json  eval_20260421_142135.json  eval_20260421_145336.json  eval_20260421_152313.json  eval_20260422_134924.json  experiment_skeptic_strictness.json
backend/firmsignal/: graph.py  models.py  state.py
backend/firmsignal/agents/: accountant.py  hitl.py  normalizer.py  scout.py  skeptic.py  synthesizer.py
backend/firmsignal/api/: models.py  pdf.py  routes.py  runner.py  store.py
backend/firmsignal/tools/: cache.py  source_quality.py
backend/tests/: conftest.py
backend/tests/api/: test_routes.py
backend/tests/unit/: test_cache.py  test_eval_utils.py  test_validation.py  (+1 more)
(+57 files in other folders)
