[project]
name = "firmsignal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.0",
    "langchain-classic>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.28",
    "langgraph>=1.1.6",
    "langsmith>=0.7.30",
    "plotly>=6.7.0",
    "praw>=7.8.1",
    "pydantic>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "reportlab>=4.4.10",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "slowapi>=0.1.9",
    "sse-starlette>=3.3.4",
    "sseclient-py>=1.9.0",
    "streamlit>=1.56.0",
    "supabase>=2.25.1",
    "tavily-python>=0.7.23",
    "tenacity>=9.0.0",
    "upstash-redis>=1.7.0",
    "uvicorn>=0.44.0",
    "yfinance>=1.2.1",
]

[dependency-groups]
dev = [
    "deepeval==2.5.5",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
